fix(project): edit styling so scroll mechanism works on small screens
Re #51

--- a/src/components/pages/work/Project/Project.css
+++ b/src/components/pages/work/Project/Project.css
@@ -5,6 +5,10 @@
   align-items: center;
 }
 
+.project-section + .project-section {
+    margin-top: 100vh;
+}
+
 .project-section__arrow {
   margin-top: 5vh;
   height: 3em;
